--- a/process.ipynb
+++ b/process.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2642231d",
+   "id": "5a254617",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,54 +16,51 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ef64d8b",
+   "id": "2c9c5f7f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# streamlit\n",
+    "# streamlit UI display\n",
     "\n",
-    "# header\n",
-    "st.title(\"Address Matching with SBERT-LaBSE\")\n",
+    "class AppUserInterface:\n",
+    "    \n",
+    "    uploaded_file = []\n",
+    "    \n",
+    "    @classmethod\n",
+    "    def execute(cls):\n",
+    "        \"\"\"\n",
+    "        main method\n",
+    "        \"\"\"\n",
+    "        cls.headings()\n",
+    "        cls.upload_widget()\n",
+    "        while not uploaded_file:\n",
+    "            cls.upload_widget()\n",
+    "    \n",
+    "    @classmethod    \n",
+    "    def headings(cls):    \n",
+    "        st.title(\"Address Matching with SBERT-LaBSE\")\n",
+    "        st.write(\"Murdoch MSc. IT TSA2025 ICT619 Project Assignment\")\n",
+    "        st.write(\"Group1 Student IDs: 35370919, 35427755, 35059342\")\n",
+    "        st.divider()\n",
+    "        st.write(\"Please upload your excel workbook in this format\")\n",
+    "        st.write(\"Column A = Address Unique ID. This helps you identify the address\")\n",
+    "        st.write(\"Column B = Source Address\")\n",
+    "        st.write(\"Column C = Target Address\")\n",
+    "        st.divider()\n",
     "\n",
-    "# header-description\n",
-    "st.write(\"Murdoch MSc. IT TSA2025 ICT619 Project Assignment\")\n",
-    "st.write(\"Group1 Student IDs: 35370919, 35427755, 35059342\")\n",
-    "st.divider()\n",
-    "\n",
-    "# file upload\n",
-    "st.write(\"Please upload your excel workbook in this format\")\n",
-    "st.write(\"Column A = Address Unique ID. This helps you identify the address\")\n",
-    "st.write(\"Column B = Source Address\")\n",
-    "st.write(\"Column C = Target Address\")\n",
-    "st.divider()\n",
-    "\n",
-    "# file upload widget\n",
-    "file_uploaded = st.file_uploader(\"Upload an Excel Workbook\", type=[\"xlsx\", \"xls\"])"
+    "    @classmethod\n",
+    "    def upload_widget(cls):\n",
+    "        cls.uploaded_file.append(\n",
+    "        st.file_uploader(\"Upload an Excel Workbook\", type=[\"xlsx\", \"xls\"])\n",
+    "        )\n",
+    "    \n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "288ca973",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# extract\n",
-    "if file_uploaded:\n",
-    "    read_df = pd.read_excel(file_uploaded)\n",
-    "    st.write(\"Preview of uploaded data\")\n",
-    "    st.dataframe(df.head(5))\n",
-    "else: \n",
-    "    st.write(\"File not uploaded\")\n",
-    "\n",
-    "\n",
-    "# open dataframe"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f7acdb91",
+   "id": "ab76d663",
    "metadata": {},
    "outputs": [],
    "source": []
