--- a/process.ipynb
+++ b/process.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5a254617",
+   "execution_count": 14,
+   "id": "1aaef47f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,8 +15,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2c9c5f7f",
+   "execution_count": 17,
+   "id": "1778f71d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
     "        \"\"\"\n",
     "        cls.headings()\n",
     "        cls.upload_widget()\n",
-    "        while not uploaded_file:\n",
+    "        while not cls.uploaded_file:\n",
     "            cls.upload_widget()\n",
     "    \n",
     "    @classmethod    \n",
@@ -59,11 +59,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ab76d663",
+   "execution_count": 18,
+   "id": "c75f51ee",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "AppUserInterface.execute()"
+   ]
   }
  ],
  "metadata": {
