--- a/process.ipynb
+++ b/process.ipynb
@@ -2,21 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "1aaef47f",
+   "execution_count": 1,
+   "id": "a2f3a959",
    "metadata": {},
    "outputs": [],
    "source": [
     "from rapidfuzz import fuzz\n",
     "from sentence_transformers import SentenceTransformer, util\n",
     "import streamlit as st\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import re\n",
+    "from io import BytesIO\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "1778f71d",
+   "execution_count": 2,
+   "id": "d44e6a48",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,19 +36,16 @@
     "        \"\"\"\n",
     "        cls.headings()\n",
     "        cls.upload_widget()\n",
-    "        while not cls.uploaded_file:\n",
-    "            cls.upload_widget()\n",
+    "        cls.footer()\n",
     "    \n",
     "    @classmethod    \n",
     "    def headings(cls):    \n",
     "        st.title(\"Address Matching with SBERT-LaBSE\")\n",
-    "        st.write(\"Murdoch MSc. IT TSA2025 ICT619 Project Assignment\")\n",
-    "        st.write(\"Group1 Student IDs: 35370919, 35427755, 35059342\")\n",
     "        st.divider()\n",
     "        st.write(\"Please upload your excel workbook in this format\")\n",
-    "        st.write(\"Column A = Address Unique ID. This helps you identify the address\")\n",
-    "        st.write(\"Column B = Source Address\")\n",
-    "        st.write(\"Column C = Target Address\")\n",
+    "        st.write(\"Column A = Address Unique ID. This helps you identify the address (i.e. index)\")\n",
+    "        st.write(\"Column B = Name as 'Native'. This is the source address, non-English\")\n",
+    "        st.write(\"Column C = Name as 'English'. This is the target address, English\")\n",
     "        st.divider()\n",
     "\n",
     "    @classmethod\n",
@@ -54,17 +54,163 @@
     "        st.file_uploader(\"Upload an Excel Workbook\", type=[\"xlsx\", \"xls\"])\n",
     "        )\n",
     "    \n",
+    "    @classmethod    \n",
+    "    def footer(cls):    \n",
+    "        st.divider()\n",
+    "        st.write(\"Murdoch MSc. IT TSA2025 ICT619 Project Assignment\")\n",
+    "        st.write(\"Group1 Student IDs: 35370919, 35427755, 35059342\")\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "daf02526",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Backend:\n",
+    "\n",
+    "    @classmethod\n",
+    "    def execute_app(cls):\n",
+    "        df = cls.read_data()\n",
+    "        df['SBERT_Score(%)'] = cls.sbertProcessing(df)\n",
+    "        df['SBERT_Score(%)'] = df['SBERT_Score(%)']*100\n",
+    "        \n",
+    "        sbertNonMatch_df = df.loc[df['SBERT_Score(%)'] < 80].copy()\n",
+    "        sbertMatch_df = df.loc[df['SBERT_Score(%)'] >= 80].copy()\n",
+    "        \n",
+    "#         df['NormalizedNative'] = df['Native'].map(normalizeNumbers)\n",
+    "        sbertMatch_df['NativeNumbers'] = sbertMatch_df['Native'].map(cls.normalizeNumbers).map(cls.extractNumbers)\n",
+    "        sbertMatch_df['EnglishNumbers'] = sbertMatch_df['English'].map(cls.extractNumbers)\n",
+    "        sbertMatch_df['NumbersFuzzy_Score(%)'] = cls.fuzzyProcessing(sbertMatch_df)\n",
+    "        \n",
+    "        fuzzyNonMatch_df = sbertMatch_df.loc[sbertMatch_df['NumbersFuzzy_Score(%)'] < 80].copy()\n",
+    "        matchedAddresses_df = sbertMatch_df.loc[sbertMatch_df['NumbersFuzzy_Score(%)'] >= 80].copy()\n",
+    "        \n",
+    "        st.download_button(\n",
+    "            label='Click Here to get output',\n",
+    "            data = cls.output(\n",
+    "                NoMatchSBERT=sbertNonMatch_df,\n",
+    "                NoMatchFuzzy=fuzzyNonMatch_df,\n",
+    "                MatchedAddresses=matchedAddresses_df\n",
+    "            ),\n",
+    "            file_name=\"output.xlsx\"\n",
+    "        )\n",
+    "    \n",
+    "    @classmethod\n",
+    "    def execute(cls):\n",
+    "        df = cls.read_data(applicationRun=False)\n",
+    "        df['SBERT_Score(%)'] = cls.sbertProcessing(df)\n",
+    "        df['SBERT_Score(%)'] = df['SBERT_Score(%)']*100\n",
+    "        sbertNonMatch_df = df.loc[df['SBERT_Score(%)'] < 80].copy()\n",
+    "        sbertMatch_df = df.loc[df['SBERT_Score(%)'] >= 80].copy()\n",
+    "        \n",
+    "#         df['NormalizedNative'] = df['Native'].map(normalizeNumbers)\n",
+    "        sbertMatch_df['NativeNumbers'] = sbertMatch_df['Native'].map(cls.normalizeNumbers).map(cls.extractNumbers)\n",
+    "        sbertMatch_df['EnglishNumbers'] = sbertMatch_df['English'].map(cls.extractNumbers)\n",
+    "        sbertMatch_df['NumbersFuzzy_Score(%)'] = cls.fuzzyProcessing(sbertMatch_df)\n",
+    "        \n",
+    "        fuzzyNonMatch_df = sbertMatch_df.loc[sbertMatch_df['NumbersFuzzy_Score(%)'] < 80].copy()\n",
+    "        matchedAddresses_df = sbertMatch_df.loc[sbertMatch_df['NumbersFuzzy_Score(%)'] >= 80].copy()\n",
+    "        cls.output(applicationRun=False,\n",
+    "            NoMatchSBERT=sbertNonMatch_df,\n",
+    "            NoMatchFuzzy=fuzzyNonMatch_df,\n",
+    "            MatchedAddresses=matchedAddresses_df\n",
+    "        )\n",
+    "    \n",
+    "    @classmethod\n",
+    "    def read_data(cls, applicationRun=True):\n",
+    "        if applicationRun:\n",
+    "            df = pd.read_excel(AppUserInterface.uploaded_file[0])\n",
+    "        else:\n",
+    "            path = f\"{os.getcwd()}\\\\address_data_test.xlsx\"\n",
+    "            df = pd.read_excel(path) # reads default file from github repo\n",
+    "        return df\n",
+    "    \n",
+    "    @classmethod\n",
+    "    def normalizeNumbers(cls, addr_str):   \n",
+    "        \n",
+    "        numbers_table = str.maketrans(\n",
+    "            {\n",
+    "                \"０\": \"0\", \n",
+    "                \"１\": \"1\", \n",
+    "                \"２\": \"2\", \n",
+    "                \"３\": \"3\", \n",
+    "                \"４\": \"4\",\n",
+    "                \"５\": \"5\", \n",
+    "                \"６\": \"6\", \n",
+    "                \"７\": \"7\", \n",
+    "                \"８\": \"8\", \n",
+    "                \"９\": \"9\"\n",
+    "            }\n",
+    "        )\n",
+    "        \n",
+    "        return re.sub(r\"[‐-‒–—―－ー]\", \"-\", addr_str.translate(numbers_table))\n",
+    "        \n",
+    "    @classmethod\n",
+    "    def extractNumbers(cls, addr_str):\n",
+    "        pattern = r\"\\d+(?:-\\d+)*\"\n",
+    "        if not addr_str:\n",
+    "            return \"\"\n",
+    "        return re.findall(pattern, addr_str)\n",
+    "    \n",
+    "\n",
+    "    @classmethod\n",
+    "    def sbertProcessing(cls, df):    \n",
+    "        model = SentenceTransformer('sentence-transformers/LaBSE')\n",
+    "        emb_native = model.encode(df['Native'].tolist(), convert_to_tensor=True)\n",
+    "        emb_english = model.encode(df['English'].tolist(), convert_to_tensor=True)\n",
+    "        #diagonal returns pairwise, cpu activates cpu processing as pandas can't process with gpu, numpy returns array\n",
+    "        return util.cos_sim(emb_native, emb_english).diagonal().cpu().numpy()\n",
+    "    \n",
+    "    @classmethod\n",
+    "    def fuzzyProcessing(cls, df):        \n",
+    "        return df.apply(\n",
+    "            lambda row: fuzz.token_sort_ratio(\n",
+    "                \" \".join(sorted(row['NativeNumbers'])), \n",
+    "                \" \".join(sorted(row['EnglishNumbers']))\n",
+    "            ),axis=1\n",
+    "        )\n",
+    "\n",
+    "    @classmethod\n",
+    "    def output(cls, applicationRun=True, **dataframes):\n",
+    "        if applicationRun:\n",
+    "            tempOutput = BytesIO()\n",
+    "            for name, df in dataframes.items():\n",
+    "                df.to_excel(tempOutput, sheet_name=name[:31], index=False)\n",
+    "            tempOutput.seek(0)\n",
+    "            return tempOutput\n",
+    "        else:\n",
+    "            path = f\"{os.getcwd()}\\\\output.xlsx\"\n",
+    "            with pd.ExcelWriter(path, engine=\"openpyxl\") as writer:\n",
+    "                for name, df in dataframes.items():\n",
+    "                    df.to_excel(writer, sheet_name=name[:31], index=False)\n",
+    "    \n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "c75f51ee",
+   "execution_count": null,
+   "id": "4f508cd3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "AppUserInterface.execute()"
+    "# AppUserInterface.execute()\n",
+    "if AppUserInterface.uploaded_file:\n",
+    "    Backend.execute_app()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "c4b39bee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#for executing locally without the UI\n",
+    "# Backend.execute()"
    ]
   }
  ],
