--- a/process.ipynb
+++ b/process.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a2f3a959",
+   "id": "27a74b74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d44e6a48",
+   "id": "82fe60c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "daf02526",
+   "id": "71f23a07",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,11 +193,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f508cd3",
+   "id": "8063f461",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# AppUserInterface.execute()\n",
+    "AppUserInterface.execute()\n",
     "if AppUserInterface.uploaded_file:\n",
     "    Backend.execute_app()"
    ]
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c4b39bee",
+   "id": "e894441c",
    "metadata": {},
    "outputs": [],
    "source": [
