--- a/process.ipynb
+++ b/process.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "27a74b74",
+   "id": "1342588b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "82fe60c5",
+   "id": "f7f8f478",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "71f23a07",
+   "id": "5f5de63e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,6 +122,7 @@
     "    @classmethod\n",
     "    def read_data(cls, applicationRun=True):\n",
     "        if applicationRun:\n",
+    "            st.write(type(AppUserInterface.uploaded_file[0]))\n",
     "            df = pd.read_excel(AppUserInterface.uploaded_file[0])\n",
     "        else:\n",
     "            path = f\"{os.getcwd()}\\\\address_data_test.xlsx\"\n",
@@ -193,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8063f461",
+   "id": "a71f2071",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "e894441c",
+   "id": "9749a61f",
    "metadata": {},
    "outputs": [],
    "source": [
