--- a/process.ipynb
+++ b/process.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1342588b",
+   "id": "ebec3317",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f7f8f478",
+   "id": "a9bdfd6d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "5f5de63e",
+   "id": "d165da38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,8 +122,12 @@
     "    @classmethod\n",
     "    def read_data(cls, applicationRun=True):\n",
     "        if applicationRun:\n",
-    "            st.write(type(AppUserInterface.uploaded_file[0]))\n",
-    "            df = pd.read_excel(AppUserInterface.uploaded_file[0])\n",
+    "            if not AppUserInterface.uploaded_file:\n",
+    "                st.warning(\"No file uploaded yet.\")\n",
+    "                return None\n",
+    "            uploaded_file = AppUserInterface.uploaded_file[0]\n",
+    "            uploaded_file.seek(0)\n",
+    "            df = pd.read_excel(uploaded_file)\n",
     "        else:\n",
     "            path = f\"{os.getcwd()}\\\\address_data_test.xlsx\"\n",
     "            df = pd.read_excel(path) # reads default file from github repo\n",
@@ -194,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a71f2071",
+   "id": "cf4693f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9749a61f",
+   "id": "29c9fb68",
    "metadata": {},
    "outputs": [],
    "source": [
