--- a/process.ipynb
+++ b/process.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ebec3317",
+   "id": "c13c5c40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a9bdfd6d",
+   "id": "67d9cf1c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
     "\n",
     "class AppUserInterface:\n",
     "    \n",
-    "    uploaded_file = []\n",
+    "    uploaded_file = False\n",
     "    \n",
     "    @classmethod\n",
     "    def execute(cls):\n",
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d165da38",
+   "id": "ee989101",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
     "            if not AppUserInterface.uploaded_file:\n",
     "                st.warning(\"No file uploaded yet.\")\n",
     "                return None\n",
-    "            uploaded_file = AppUserInterface.uploaded_file[0]\n",
+    "            uploaded_file = AppUserInterface.uploaded_file\n",
     "            uploaded_file.seek(0)\n",
     "            df = pd.read_excel(uploaded_file)\n",
     "        else:\n",
@@ -198,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf4693f5",
+   "id": "a1956bcf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "29c9fb68",
+   "id": "f7278f98",
    "metadata": {},
    "outputs": [],
    "source": [
