--- a/process.ipynb
+++ b/process.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c13c5c40",
+   "id": "7a8c144c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "67d9cf1c",
+   "id": "e2129539",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
     "        main method\n",
     "        \"\"\"\n",
     "        cls.headings()\n",
-    "        cls.upload_widget()\n",
+    "        cls.uploaded_file = cls.upload_widget()\n",
     "        cls.footer()\n",
     "    \n",
     "    @classmethod    \n",
@@ -50,9 +50,8 @@
     "\n",
     "    @classmethod\n",
     "    def upload_widget(cls):\n",
-    "        cls.uploaded_file.append(\n",
-    "        st.file_uploader(\"Upload an Excel Workbook\", type=[\"xlsx\", \"xls\"])\n",
-    "        )\n",
+    "        return st.file_uploader(\"Upload an Excel Workbook\", type=[\"xlsx\", \"xls\"])\n",
+    "\n",
     "    \n",
     "    @classmethod    \n",
     "    def footer(cls):    \n",
@@ -65,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ee989101",
+   "id": "d1639c7f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1956bcf",
+   "id": "bda9c786",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f7278f98",
+   "id": "c1a02d24",
    "metadata": {},
    "outputs": [],
    "source": [
