--- a/process.ipynb
+++ b/process.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7a8c144c",
+   "id": "014b9b9c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e2129539",
+   "id": "a53c0433",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d1639c7f",
+   "id": "b6919ac1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,10 +181,14 @@
     "    def output(cls, applicationRun=True, **dataframes):\n",
     "        if applicationRun:\n",
     "            tempOutput = BytesIO()\n",
-    "            for name, df in dataframes.items():\n",
-    "                df.to_excel(tempOutput, sheet_name=name[:31], index=False)\n",
-    "            tempOutput.seek(0)\n",
-    "            return tempOutput\n",
+    "            with pd.ExcelWriter(tempOutput, engine='xlsxwriter') as writer:\n",
+    "                for name, df in dataframes.items():\n",
+    "                    df.to_excel(writer, sheet_name=name[:31], index=False)\n",
+    "\n",
+    "        tempOutput.seek(0)\n",
+    "        return tempOutput\n",
+    "        \n",
+    "        \n",
     "        else:\n",
     "            path = f\"{os.getcwd()}\\\\output.xlsx\"\n",
     "            with pd.ExcelWriter(path, engine=\"openpyxl\") as writer:\n",
@@ -197,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bda9c786",
+   "id": "e2d19acb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c1a02d24",
+   "id": "8549133b",
    "metadata": {},
    "outputs": [],
    "source": [
